WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170273
[GCrypt] Register missing algorithms in CryptoAlgorithmRegistry::platformRegisterAlgoritmhs()
https://bugs.webkit.org/show_bug.cgi?id=170273
Summary
[GCrypt] Register missing algorithms in CryptoAlgorithmRegistry::platformRegi...
Zan Dobersek
Reported
2017-03-29 23:54:46 PDT
[GCrypt] Register missing algorithms in CryptoAlgorithmRegistry::platformRegisterAlgoritmhs()
Attachments
Patch
(2.22 KB, patch)
2017-03-29 23:57 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2017-03-29 23:57:01 PDT
Created
attachment 305842
[details]
Patch
Zan Dobersek
Comment 2
2017-03-30 09:29:40 PDT
Comment on
attachment 305842
[details]
Patch Clearing flags on attachment: 305842 Committed
r214610
: <
http://trac.webkit.org/changeset/214610
>
Zan Dobersek
Comment 3
2017-03-30 09:29:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug