[GCrypt] Register missing algorithms in CryptoAlgorithmRegistry::platformRegisterAlgoritmhs() https://bugs.webkit.org/show_bug.cgi?id=170273

Reviewed by Michael Catanzaro.

* crypto/gcrypt/CryptoAlgorithmRegistryGCrypt.cpp:
(WebCore::CryptoAlgorithmRegistry::platformRegisterAlgorithms):
Add registerAlgorithm<> calls for AES_CFB, AES_GCM, ECDH and
PBKDF2 algorithms.


Canonical link: https://commits.webkit.org/187206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214610 268f45cc-cd09-0410-ab3c-d52691b4dbfc